--- a/LAB4/main.css
+++ b/LAB4/main.css
@@ -451,7 +451,6 @@ body#Index {
     font-size: 13px;
     font-weight: bold;
     text-align: center;
-    border-bottom: 1px solid gray;
 }
 
 #Index .Movie .MovieTitle {
@@ -462,7 +461,10 @@ body#Index {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-top: 1px solid gray;
+    margin-top: 5px;
 }
+
 /*
 @keyframes ScalePoster{
     100% {transform: scale(1.3, 1.3);}
